# numpy_shape_typing

./: .gitmodules  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
numpy_shape_typing/: __init__.py  add.py  dot.py  fake_alegebraic.py  linear.py  matadd.py  matmul.py  matsum.py  rand.py  ravel.py  squeeze.py  types.py
src/: __init__.py
